# NullTrace-Injector

./: .gitignore  CMakeLists.txt  README.md  adb_push.bat  build.bat  build.sh  main.cpp
NullElf/: CMakeLists.txt
NullElf/include/: nullelf.h
NullElf/src/: nullelf.cpp
NullInject/: CMakeLists.txt  build.bat  push.bat
NullInject/NullTrace/: CMakeLists.txt
NullInject/NullTrace/NullElf/: CMakeLists.txt
NullInject/NullTrace/app/include/: nullutils.h
NullInject/NullTrace/app/src/: nullproc.cpp
NullInject/app/src/: main.cpp
NullTrace/: CMakeLists.txt  push.bat
NullTrace/NullElf/: CMakeLists.txt
NullTrace/app/include/: nullproc.h
NullTrace/app/src/: nullproc.cpp
NullTrace/include/: nullproc.h  nullutils.h  pnull.h
NullTrace/src/: nullproc.cpp  nullutils.cpp  pnull.cpp
build_out/arm64-v8a/: NullTrace-Injector
build_out/armeabi-v7a/: NullTrace-Injector
build_out/x86/: NullTrace-Injector
build_out/x86_64/: NullTrace-Injector
jni/: Android.mk  Application.mk
jni/NullElf/include/: nullelf.h
jni/NullElf/src/: nullelf.cpp
jni/NullTrace/include/: nullproc.h  nullutils.h  pnull.h
jni/NullTrace/src/: nullproc.cpp  nullutils.cpp  pnull.cpp
jni/src/: main.cpp
libs/arm64-v8a/: NullInject
libs/armeabi-v7a/: NullInject
libs/x86/: NullInject
libs/x86_64/: NullInject
